--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,16 @@
+*
 *.DS_Store
 
 
 # Files to not ignore
 !/.gitignore
+!/.gitmodules
 
 # Folder to not ignore
+!/wezterm
 !/nvim
 !/neofetch
 !/kitty
 !/iterm2
 !/alacritty
-
+!/tmux
