--- a/config/.config/starship/starship.toml
+++ b/config/.config/starship/starship.toml
@@ -1,96 +1,146 @@
-# Don't print a new line at the start of the prompt
-add_newline = false
-
-# Define order to make prompt on one line
-# https://starship.rs/config/#default-prompt-order
 format = """
+[](#9A348E)\
+$os\
 $username\
-$hostname\
-$shlvl\
+[](bg:#DA627D fg:#9A348E)\
 $directory\
+[](fg:#DA627D bg:#FCA17D)\
 $git_branch\
 $git_commit\
-$git_state\
 $git_status\
-$hg_branch\
-$docker_context\
-$nix_shell\
-$status\
 $character\
+[](fg:#FCA17D bg:#86BBD8)\
+$c\
+$python\
+$golang\
+$haskell\
+$java\
+$julia\
+$nodejs\
+$rust\
+$scala\
+[](fg:#86BBD8 bg:#06969A)\
+$docker_context\
+[](fg:#06969A bg:#33658A)\
+$kube_context\
+[](fg:#06969A bg:#33658A)\
+$time\
+[ ](fg:#33658A)\
 """
 
-# Change timeout of scanning files to 10 mili secs
-scan_timeout = 10
+# Disable the blank line at the start of the prompt
+# add_newline = false
 
+# You can also replace your username with a neat symbol like   or disable this
+# and use the os module below
+[username]
+show_always = true
+style_user = "bg:#9A348E"
+style_root = "bg:#9A348E"
+format = '[$user ]($style)'
+disabled = false
+
+# An alternative to the username module which displays a symbol that
+# represents the current operating system
+[os]
+style = "bg:#9A348E"
+disabled = true # Disabled by default
+
+[directory]
+style = "bg:#DA627D"
+format = "[ $path ]($style)"
+truncation_length = 3
+truncation_symbol = "…/"
+
+# Here is how you can shorten some long paths by text replacement
+# similar to mapped_locations in Oh My Posh:
+[directory.substitutions]
+"Documents" = " "
+"Downloads" = " "
+"Music" = " "
+"Pictures" = " "
+"Github" = ""
+# Keep in mind that the order matters. For example:
+# "Important Documents" = "  "
+# will not be replaced, because "Documents" was already substituted before.
+# So either put "Important Documents" before "Documents" or use the substituted version:
+# "Important  " = "  "
 [python]
 symbol = '🐍'
 pyenv_version_name = true
+format = '[ $symbol ($version) ]($style)'
 
-[character]
-success_symbol = "[➜](bold green)"
-error_symbol = "[➜](bold red)"
-vicmd_symbol = "[V](bold blue)"
+[c]
+symbol = " "
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
 
-[directory]
-truncation_length = 3
-truncate_to_repo = true
-style = "bold cyan"
+[docker_context]
+symbol = " "
+style = "bg:#06969A"
+format = '[ $symbol $context ]($style) $path'
 
+[elixir]
+symbol = " "
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
+[elm]
+symbol = " "
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
 
 [git_branch]
-style = "bold yellow"
-
-[git_state]
-format = "[\\($state($progress_current of $progress_total)\\)]($style)"
-cherry_pick = "[🍒 PICKING](bold red)"
+symbol = ""
+style = "bg:#FCA17D"
+format = '[ $symbol $branch ]($style)'
 
 [git_status]
-format = '([\[$ahead_behind\]]($style) )'
-style = "bold blue"
-ahead = "⇡${count}"
-diverged = "⇕⇡${ahead_count}⇣${behind_count}"
-behind = "⇣${count}"
+style = "bg:#FCA17D"
+format = '[$all_status$ahead_behind ]($style)'
 
-[nix_shell]
-symbol = ""
-impure_msg = "[](red)"
-pure_msg = "[](green)"
-format = 'via [$symbol \($name\)](bold blue) '
+[golang]
+symbol = " "
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
 
-# https://github.com/starship/starship/discussions/1252#discussioncomment-194627
-# https://github.com/starship/starship/discussions/1252#discussioncomment-838901
-[custom.giturl]
-description = "Display symbol for remote Git server"
-command = """
-GIT_REMOTE=$(command git ls-remote --get-url 2> /dev/null)
-if [[ "$GIT_REMOTE" =~ "github" ]]; then
-    GIT_REMOTE_SYMBOL=" "
-elif [[ "$GIT_REMOTE" =~ "gitlab" ]]; then
-    GIT_REMOTE_SYMBOL=" "
-elif [[ "$GIT_REMOTE" =~ "bitbucket" ]]; then
-    GIT_REMOTE_SYMBOL=" "
-elif [[ "$GIT_REMOTE" =~ "git" ]]; then
-    GIT_REMOTE_SYMBOL=" "
-else
-    GIT_REMOTE_SYMBOL=" "
-fi
-printf "$GIT_REMOTE_SYMBOL"
-"""
-when = 'git rev-parse --is-inside-work-tree 2> /dev/null'
-shell = ["bash", "--noprofile", "--norc"]
-format = "at $output  "
+[haskell]
+symbol = " "
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
 
-# https://github.com/starship/starship/discussions/1252#discussioncomment-502146
-[custom.lastcommit]
-description = "Display last commit hash and message"
-command = "git show -s --format='%h \"%s\"'"
-when = 'git rev-parse --is-inside-work-tree 2> /dev/null'
-style = "bright-yellow bold"
-format = "[$output]($style) "
+[java]
+symbol = " "
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
 
-# https://github.com/starship/starship/discussions/1252#discussioncomment-481286
-[custom.git_email]
-command = "git config user.email"
-when = "git rev-parse --git-dir 2> /dev/null"
-format = "by [$output]($style) "
-style = "bright-yellow bold"
+[julia]
+symbol = " "
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
+[nodejs]
+symbol = ""
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
+[nim]
+symbol = " "
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
+[rust]
+symbol = ""
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
+[scala]
+symbol = " "
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
+[time]
+disabled = false
+time_format = "%R" # Hour:Minute Format
+style = "bg:#33658A"
+format = '[ ♥ $time ]($style)'
