--- a/config/.config/starship/starship.toml
+++ b/config/.config/starship/starship.toml
@@ -1,7 +1,15 @@
+# Get editor completions based on the config schema
+"$schema" = 'https://starship.rs/config-schema.json'
+
+# Don't print a new line at the start of the prompt
+add_newline = false
+
+# Define order to make prompt on one line
 format = """
 [](#9A348E)\
 $os\
 $username\
+$hostname\
 [](bg:#DA627D fg:#9A348E)\
 $directory\
 [](fg:#DA627D bg:#FCA17D)\
@@ -10,6 +18,9 @@ $git_commit\
 $git_status\
 $character\
 [](fg:#FCA17D bg:#86BBD8)\
+"""
+
+right_format = """
 $c\
 $python\
 $golang\
@@ -27,9 +38,18 @@ $kube_context\
 $time\
 [ ](fg:#33658A)\
 """
+[battery]
+full_symbol = "🔋"
+charging_symbol = "🔌"
+discharging_symbol = "⚡"
 
-# Disable the blank line at the start of the prompt
-# add_newline = false
+[[battery.display]]
+threshold = 30
+style = "bold red"
+
+[cmd_duration]
+min_time = 5_000  # Show command duration over 5,000 milliseconds (=10 sec)
+format = " took [$duration]($style)"
 
 # You can also replace your username with a neat symbol like   or disable this
 # and use the os module below
@@ -49,8 +69,15 @@ disabled = true # Disabled by default
 [directory]
 style = "bg:#DA627D"
 format = "[ $path ]($style)"
-truncation_length = 3
+truncation_length = 5
 truncation_symbol = "…/"
+
+[hostname]
+ssh_only = false
+format = "<[$hostname]($style)>"
+trim_at = "-"
+style = "bold dimmed white"
+disabled = true
 
 # Here is how you can shorten some long paths by text replacement
 # similar to mapped_locations in Oh My Posh:
