--- a/config/.config/tmux/tmux.conf
+++ b/config/.config/tmux/tmux.conf
@@ -95,8 +95,8 @@ set -g @continuum-restore 'off'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
 
-setenv -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.config/tmux/plugins/"
-if "test ! -d ~/.tmux/plugins/tpm" \
-   "run 'git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm && ~/.config/tmux/plugins/tpm/bin/install_plugins'"
+setenv -g TMUX_PLUGIN_MANAGER_PATH "$XDG_CONFIG_HOME/tmux/plugins/"
+if "test ! -d $XDG_CONFIG_HOME/tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm $XDG_CONFIG_HOME/tmux/plugins/tpm && $XDG_CONFIG_HOME/tmux/plugins/tpm/bin/install_plugins'"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.config/tmux/plugins/tpm/tpm'
+run -b "$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm"
