Bug/fix eza auto complete (#3)
* Fix broken autocomplete for eza

* Fix alacritty and wezterm, update brew and some setup files

* Update nvim

* Update zsh to include autocompelte

* Update config zsh to include auto-complete

* Updated java home, added new poetry config, updated neovim

--- a/setup/macos/utils/Brewfile
+++ b/setup/macos/utils/Brewfile
@@ -16,7 +16,9 @@ cask "font-fira-code"
 cask "font-jetbrains-mono"
 cask "font-cascadia-mono"
 cask "font-3270-nerd-font"
+
 # packages
+brew "java"
 brew "bat" # better cat
 brew "cloc" # lines of code counter
 brew "git-delta" # a better git diff
@@ -31,6 +33,7 @@ brew "highlight" # code syntax highlighting
 brew "htop" # a top alternative
 brew "jq" # work with JSON files in shell scripts
 brew "neofetch" # pretty system info
+brew "gnu-sed"
 brew "neovim" # A better vim
 brew "python" # python (latest)
 brew "ripgrep" # very fast file searcher
@@ -46,7 +49,7 @@ brew "zsh" # zsh (latest)
 brew "thefuck"
 brew "pyenv"
 brew "pyenv-virtualenv"
-brew "exa"
+brew "eza"
 brew "glow"
 brew "zstd"
 brew "k9s"
