--- a/config/.config/wezterm/color/vscode-dark.toml
+++ b/config/.config/wezterm/color/vscode-dark.toml
@@ -1,6 +1,6 @@
 [colors]
 ansi = [
-	'#1e1e1e',
+	'#1f1f1f',
 	'#f44747',
 	'#608b4e',
 	'#dcdcaa',
@@ -9,7 +9,7 @@ ansi = [
 	'#56b6c2',
 	'#d4d4d4',
 ]
-background = '#1e1e1e'
+background = '#1f1f1f'
 brights = [
 	'#808080',
 	'#f44747',
@@ -22,13 +22,47 @@ brights = [
 ]
 cursor_bg = '#d4d4d4'
 cursor_border = '#d4d4d4'
-cursor_fg = '#1e1e1e'
+cursor_fg = '#1f1f1f'
 foreground = '#d4d4d4'
 selection_bg = '#dcdcaa'
-selection_fg = '#1e1e1e'
+selection_fg = '#1f1f1f'
 
 [colors.indexed]
 
 [metadata]
 name = 'vscode-dark'
 origin_url = 'https://github.com/Mofiqul/vscode.nvim'
+# [colors]
+# ansi = [
+# 	'#1e1e1e',
+# 	'#f44747',
+# 	'#608b4e',
+# 	'#dcdcaa',
+# 	'#569cd6',
+# 	'#c678dd',
+# 	'#56b6c2',
+# 	'#d4d4d4',
+# ]
+# background = '#1e1e1e'
+# brights = [
+# 	'#808080',
+# 	'#f44747',
+# 	'#608b4e',
+# 	'#dcdcaa',
+# 	'#569cd6',
+# 	'#c678dd',
+# 	'#56b6c2',
+# 	'#d4d4d4',
+# ]
+# cursor_bg = '#d4d4d4'
+# cursor_border = '#d4d4d4'
+# cursor_fg = '#1e1e1e'
+# foreground = '#d4d4d4'
+# selection_bg = '#dcdcaa'
+# selection_fg = '#1e1e1e'
+#
+# [colors.indexed]
+#
+# [metadata]
+# name = 'vscode-dark'
+# origin_url = 'https://github.com/Mofiqul/vscode.nvim'
