--- a/config/.config/tmux/tmux.conf
+++ b/config/.config/tmux/tmux.conf
@@ -75,6 +75,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'jabirali/tmux-tilish'
+set -g @plugin '27medkamal/tmux-session-wizard'
 
 # Tilish
 set -g @tilish-default 'tiled'
@@ -100,3 +101,5 @@ if "test ! -d $XDG_CONFIG_HOME/tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm $XDG_CONFIG_HOME/tmux/plugins/tpm && $XDG_CONFIG_HOME/tmux/plugins/tpm/bin/install_plugins'"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b "$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm"
+
+unbind M-k
