Update gitkeep in new directories, add new tools, update setup for zsh, Fix issues with lf, vale and zellij, update git related files, fzf capabilities add new plugins for neovim and update tmux with vim motion add new tool yazi, update zshrc updated zsh fzf, atuin and cleaned up some folders Updated nvim config, setup ripgrep, fixed some bin related issues, added new tools to brew
Updated nvim config, setup ripgrep, fixed some bin related issues, added new tools to brew
Update zshrc and zprofile setup, create new jq executable

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.DS_Store
-
+startup*.log
+startlog*
 # We want to keep these folders empty since
 # they will be created during the install process
 
@@ -21,6 +22,8 @@ config/.config/oh-my-zsh/*
 /config/.config/zsh/.zsh_history
 /config/.config/tmux/plugins/*
 !/config/.config/tmux/plugins/.gitkeep
+/config/.config/glcloud
+!/config/.config/glcloud/.gitkeep
 /.vscode/
 /.idea/
 */.idea/*
