--- a/config/.config/git/cfg/alias/branch.conf
+++ b/config/.config/git/cfg/alias/branch.conf
@@ -2,6 +2,9 @@
 # All these aliases have to deal with branches
 
 [alias]
+    # Short hand for calling better branch script
+    bb = better-branch
+
     # Create a new branch from base-remote master and publish it to origin
     bcreate = "!f() { git check-remote -nq 2>/dev/null ; git checkout -b $1 $(git base-remote)/$(git default) && git push -u origin $(git branch-name); } ; f"
 
@@ -28,7 +31,16 @@
     unpub = unpublish
 
     # List all branches on the base remote and filter them with fzf
-    search-branch = "!git branch -r --list | grep -v HEAD | sed \"s#$(git base-remote)/##\" | fzf --height 40% --reverse"
+    search-branch = "!git branch -r --list | grep -v HEAD | sed \"s#$(git base-remote)/##\" | fzf --height 40% --reverse --multi"
+    sb = search-branch
+
+    # Search local branches created in the local repository
+    search-local-branch = "!git branch | grep -v '^* ' | fzf --height 40% --reverse --multi"
+    slb = search-local-branch
+
+    # Delete local branhes
+    delete-branch = "!git branch -D $(git search-local-branch)"
+    dlb = delete-branch
 
     # Delete a branch name, then create the same branch name based on master -
     # useful if you have, for example, a development branch and master branch
