--- a/config/.config/starship/starship.toml
+++ b/config/.config/starship/starship.toml
@@ -1,32 +1,28 @@
 # Get editor completions based on the config schema
 "$schema" = 'https://starship.rs/config-schema.json'
 
-# Don't print a new line at the start of the prompt
+# Inserts a blank line between shell prompts
 add_newline = false
 
-# Define order to make prompt on one line
-format = """
-[](#0fb84f)\
-$os\
-$username\
-$hostname\
-[](bg:#DA627D fg:#9A348E)\
+format = """\
+[░▒▓](bg:#030B16 fg:#7DF9AA)\
+[󰀵 ](bg:#7DF9AA fg:#090c0c)\
+[](fg:#7DF9AA bg:#1C3A5E)\
+[](fg:#1C3A5E bg:#3B76F0)\
 $directory\
-[](fg:#DA627D bg:#FCA17D)\
+[](fg:#3B76F0 bg:#FCF392)\
 $git_branch\
-$git_commit\
 $git_status\
+$git_metrics\
+[](fg:#FCF392 bg:#030B16)\
 $character\
-[](fg:#FCA17D bg:#86BBD8)\
 """
 
 right_format = """
 $c\
 $python\
 $golang\
-$haskell\
 $java\
-$julia\
 $nodejs\
 $rust\
 $scala\
@@ -38,51 +34,57 @@ $kube_context\
 $time\
 [ ](fg:#33658A)\
 """
-[battery]
-full_symbol = "🔋"
-charging_symbol = "🔌"
-discharging_symbol = "⚡"
-
-[[battery.display]]
-threshold = 30
-style = "bold red"
-
-[cmd_duration]
-min_time = 5_000  # Show command duration over 5,000 milliseconds (=10 sec)
-format = " took [$duration]($style)"
-
-# You can also replace your username with a neat symbol like   or disable this
-# and use the os module below
-[username]
-show_always = true
-style_user = "bg:#0a8a3a"
-style_root = "bg:#9A348E"
-format = '[$user ]($style)'
-disabled = false
-
-# An alternative to the username module which displays a symbol that
-# represents the current operating system
-[os]
-style = "bg:#9A348E"
-disabled = true # Disabled by default
 
 [directory]
-style = "bg:#DA627D"
+style = "fg:#E4E4E4 bg:#3B76F0"
 format = "[ $path ]($style)"
-truncation_length = 5
+truncation_length = 3
 truncation_symbol = "…/"
 
-[hostname]
-ssh_only = false
-format = "<[$hostname]($style)>"
-trim_at = "-"
-style = "bold dimmed white"
-disabled = true
+[git_branch]
+format = '[ $symbol$branch(:$remote_branch) ]($style)'
+symbol = "  "
+style = "fg:#1C3A5E bg:#FCF392"
+
+[git_status]
+format = '([\[$ahead_behind\]]($style) )'
+style = "bold blue"
+ahead = "⇡${count}"
+diverged = "⇕⇡${ahead_count}⇣${behind_count}"
+behind = "⇣${count}"
+
+[git_state]
+format = "[\\($state($progress_current of $progress_total)\\)]($style)"
+cherry_pick = "[🍒 PICKING](bold red)"
+
+[git_metrics]
+format = "([+$added]($added_style))[]($added_style)"
+added_style = "fg:#1C3A5E bg:#FCF392"
+deleted_style = "fg:bright-red bg:235"
+disabled = false
+
+[hg_branch]
+format = "[ $symbol$branch ]($style)"
+symbol = " "
+
+[cmd_duration]
+format = "[  $duration ]($style)"
+style = "fg:bright-white bg:18"
+
+[character]
+success_symbol = '[ ➜](bold green) '
+error_symbol = '[ ✗](#E84D44) '
+
+[time]
+disabled = false
+time_format = "%T"                                     # Hour:Minute:Seconds Format
+style = "bg:#1d2230"
+format = '[[🕙 $time ](bg:#1C3A5E fg:#8DFBD2)]($style)'
 
 # Here is how you can shorten some long paths by text replacement
 # similar to mapped_locations in Oh My Posh:
 [directory.substitutions]
-"Documents" = " "
+"Documents" = "󰈙 "
 "Downloads" = " "
 "Music" = " "
 "Pictures" = " "
@@ -97,62 +99,24 @@ symbol = '🐍'
 pyenv_version_name = true
 format = '[ $symbol ($version) ]($style)'
 
-[c]
-symbol = " "
-style = "bg:#86BBD8"
-format = '[ $symbol ($version) ]($style)'
-
 [docker_context]
-symbol = " "
+symbol = "🐳"
 style = "bg:#06969A"
 format = '[ $symbol $context ]($style) $path'
-
-[elixir]
-symbol = " "
-style = "bg:#86BBD8"
-format = '[ $symbol ($version) ]($style)'
-
-[elm]
-symbol = " "
-style = "bg:#86BBD8"
-format = '[ $symbol ($version) ]($style)'
-
-[git_branch]
-symbol = ""
-style = "bg:#FCA17D"
-format = '[ $symbol $branch ]($style)'
-
-[git_status]
-style = "bg:#FCA17D"
-format = '[$all_status$ahead_behind ]($style)'
 
 [golang]
 symbol = " "
 style = "bg:#86BBD8"
 format = '[ $symbol ($version) ]($style)'
 
-[haskell]
-symbol = " "
-style = "bg:#86BBD8"
-format = '[ $symbol ($version) ]($style)'
-
 [java]
-symbol = " "
+symbol = "☕ "
 style = "bg:#86BBD8"
 format = '[ $symbol ($version) ]($style)'
-
-[julia]
-symbol = " "
-style = "bg:#86BBD8"
-format = '[ $symbol ($version) ]($style)'
+detect_extensions = ['java', 'class', 'gradle', 'jar', 'cljs', 'cljc']
 
 [nodejs]
 symbol = ""
-style = "bg:#86BBD8"
-format = '[ $symbol ($version) ]($style)'
-
-[nim]
-symbol = " "
 style = "bg:#86BBD8"
 format = '[ $symbol ($version) ]($style)'
 
@@ -165,9 +129,3 @@ format = '[ $symbol ($version) ]($style)'
 symbol = " "
 style = "bg:#86BBD8"
 format = '[ $symbol ($version) ]($style)'
-
-[time]
-disabled = false
-time_format = "%R" # Hour:Minute Format
-style = "bg:#33658A"
-format = '[ ♥ $time ]($style)'
