--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ startlog*
 !/config/.config/yazi/plugins/smart-paste.yazi/init.lua
 /config/.config/yazi/flavors/*
 !/config/.config/yazi/flavors/.gitkeep
+/config/.config/helix/runtime/*
+/config/.config/helix/runtime/.gitkeep
 
 
 
