--- a/config/.config/starship/starship.toml
+++ b/config/.config/starship/starship.toml
@@ -4,128 +4,185 @@
 # Inserts a blank line between shell prompts
 add_newline = false
 
-format = """\
+format = """
 [░▒▓](bg:#030B16 fg:#7DF9AA)\
-[󰀵 ](bg:#7DF9AA fg:#090c0c)\
-[](fg:#7DF9AA bg:#1C3A5E)\
-[](fg:#1C3A5E bg:#3B76F0)\
 $directory\
-[](fg:#3B76F0 bg:#FCF392)\
+[](fg:blue bg:yellow)\
 $git_branch\
 $git_status\
 $git_metrics\
-[](fg:#FCF392 bg:#030B16)\
-$character\
-"""
+[](fg:yellow bg:cyan)\
+$time\
+[](fg:cyan)\
+$fill\
 
-right_format = """
+$cmd_duration\
+$memory_usage\
+$docker_context\
+
 $c\
-$python\
+$dart\
+$elixir\
+$elm\
 $golang\
+$haskell\
 $java\
+$julia\
+$kotlin\
+$lua\
 $nodejs\
+$nim\
+$python\
+$rlang\
+$ruby\
 $rust\
 $scala\
-[](fg:#86BBD8 bg:#06969A)\
-$docker_context\
-[](fg:#06969A bg:#33658A)\
-$kube_context\
-[](fg:#06969A bg:#33658A)\
-$time\
-[ ](fg:#33658A)\
+
+$line_break\
+$character
 """
 
-[directory]
-style = "fg:#E4E4E4 bg:#3B76F0"
-format = "[ $path ]($style)"
-truncation_length = 3
-truncation_symbol = "…/"
-
-[git_branch]
-format = '[ $symbol$branch(:$remote_branch) ]($style)'
-symbol = "  "
-style = "fg:#1C3A5E bg:#FCF392"
-
-[git_status]
-format = '([\[$ahead_behind\]]($style) )'
-style = "bold blue"
-ahead = "⇡${count}"
-diverged = "⇕⇡${ahead_count}⇣${behind_count}"
-behind = "⇣${count}"
-
-[git_state]
-format = "[\\($state($progress_current of $progress_total)\\)]($style)"
-cherry_pick = "[🍒 PICKING](bold red)"
-
-[git_metrics]
-format = "([+$added]($added_style))[]($added_style)"
-added_style = "fg:#1C3A5E bg:#FCF392"
-deleted_style = "fg:bright-red bg:235"
-disabled = false
-
-[hg_branch]
-format = "[ $symbol$branch ]($style)"
-symbol = " "
-
-[cmd_duration]
-format = "[  $duration ]($style)"
-style = "fg:bright-white bg:18"
+continuation_prompt = "[ ](blue)"
 
 [character]
-success_symbol = '[ ➜](bold green) '
-error_symbol = '[ ✗](#E84D44) '
+success_symbol = "[ ](bold green)"
+error_symbol = "[✘ ](italic red)"
+
+[directory]
+style = "fg:black bg:blue"
+format = "[ $path ]($style)"
+truncation_length = 3
+truncation_symbol = " …/"
+
+[directory.substitutions]
+"~" = " ~"
+"Documents" = "  Documents"
+"Downloads" = "  Downloads"
+"Music" = "  Music"
+"Pictures" = "  Pictures"
+"Github" = "  Github"
+
+[git_branch]
+symbol = "  "
+style = "fg:black bg:yellow"
+format = '[ $symbol $branch ]($style)'
+
+[git_status]
+ahead = " $count "
+behind = " $count "
+deleted = "﫧$count "
+diverged = " $count "
+stashed = " $count "
+modified = " $count "
+staged = " $count "
+renamed = " $count "
+untracked = " $count "
+style = "fg:black bg:yellow"
+format = '[$all_status$ahead_behind ]($style)'
 
 [time]
 disabled = false
-time_format = "%T"                                     # Hour:Minute:Seconds Format
-style = "bg:#1d2230"
-format = '[[🕙 $time ](bg:#1C3A5E fg:#8DFBD2)]($style)'
+time_format = "%a, %I:%M %p"   # Hour:Minute Format
+style = "fg:black bg:cyan"
+format = '[  $time ]($style)'
 
-# Here is how you can shorten some long paths by text replacement
-# similar to mapped_locations in Oh My Posh:
-[directory.substitutions]
-"Documents" = "󰈙 "
-"Downloads" = " "
-"Music" = " "
-"Pictures" = " "
-"Github" = ""
-# Keep in mind that the order matters. For example:
-# "Important Documents" = "  "
-# will not be replaced, because "Documents" was already substituted before.
-# So either put "Important Documents" before "Documents" or use the substituted version:
-# "Important  " = "  "
-[python]
-symbol = '🐍'
-pyenv_version_name = true
-format = '[ $symbol ($version) ]($style)'
+[cmd_duration]
+style = "yellow bold"
+format = '[  $duration]($style)'
+
+[memory_usage]
+disabled = false
+threshold = 75
+symbol = ' '
+style = 'yellow bold'
+format = '[ $symbol $ram]($style)'
 
 [docker_context]
-symbol = "🐳"
-style = "bg:#06969A"
+symbol = " "
+style = "fg:#06969A bold"
 format = '[ $symbol $context ]($style) $path'
+
+[c]
+symbol = " "
+style = "fg:#3F4347 bold"
+format = '[ $symbol ($version) ]($style)'
+
+[dart]
+symbol = " "
+style = "fg:#3FBEF7 bold"
+format = '[ $symbol ($version) ]($style)'
+
+[elixir]
+symbol = " "
+style = "fg:#422758 bold"
+format = '[ $symbol ($version) ]($style)'
+
+[elm]
+symbol = " "
+style = "fg:#F0AD00 bold"
+format = '[ $symbol ($version) ]($style)'
 
 [golang]
 symbol = " "
-style = "bg:#86BBD8"
+style = "fg:#00ACD7 bold"
+format = '[ $symbol ($version) ]($style)'
+
+[haskell]
+symbol = " "
+style = "fg:#9C4B89 bold"
 format = '[ $symbol ($version) ]($style)'
 
 [java]
-symbol = "☕ "
-style = "bg:#86BBD8"
+symbol = " "
+style = "fg:#F0931C bold"
 format = '[ $symbol ($version) ]($style)'
-detect_extensions = ['java', 'class', 'gradle', 'jar', 'cljs', 'cljc']
+
+[julia]
+symbol = " "
+style = "fg:#CA3C32 bold"
+format = '[ $symbol ($version) ]($style)'
+
+[kotlin]
+symbol = "🅺 "
+style = "fg:#746DDA bold"
+format = '[ $symbol ($version) ]($style)'
+
+[lua]
+symbol = " "
+style = "fg:#0402A9 bold"
+format = '[ $symbol ($version) ]($style)'
 
 [nodejs]
 symbol = ""
-style = "bg:#86BBD8"
+style = "fg:#6BA15C bold"
+format = '[ $symbol ($version) ]($style)'
+
+[nim]
+symbol = " "
+style = "fg:#F7E852 bold"
+format = '[ $symbol ($version) ]($style)'
+
+[python]
+symbol = " "
+style = "fg:#316A9A bold"
+format = '[ $symbol ($version) ]($style)'
+
+[rlang]
+symbol = "ﳒ "
+style = "fg:#2266B8 bold"
+format = '[ $symbol ($version) ]($style)'
+
+[ruby]
+symbol = " "
+style = "fg:#B91B0B bold"
 format = '[ $symbol ($version) ]($style)'
 
 [rust]
-symbol = ""
-style = "bg:#86BBD8"
+symbol = " "
+style = "fg:#C26F2E bold"
 format = '[ $symbol ($version) ]($style)'
 
 [scala]
 symbol = " "
-style = "bg:#86BBD8"
+style = "fg:#D73222 bold"
 format = '[ $symbol ($version) ]($style)'
