--- a/config/.config/yazi/package.toml
+++ b/config/.config/yazi/package.toml
@@ -1,13 +1,34 @@
-[plugin]
-deps = [
-	{ use = "yazi-rs/plugins:git", rev = "600614a" },
-	{ use = "yazi-rs/plugins:full-border", rev = "600614a" },
-	{ use = "yazi-rs/plugins:jump-to-char", rev = "600614a" },
-	{ use = "yazi-rs/plugins:smart-filter", rev = "600614a" },
-	{ use = "yazi-rs/plugins:smart-enter", rev = "600614a" },
-	{ use = "Reledia/glow", rev = "5ce76dc" },
+[[plugin.deps]]
+use = "AnirudhG07/rich-preview"
+rev = "fdcf373"
+hash = "bd1737dd44b202f412122e6a3b378d4c"
 
-]
+[[plugin.deps]]
+use = "yazi-rs/plugins:smart-enter"
+rev = "55bf699"
+hash = "7918aab6a71caf31b58411f789195677"
 
-[flavor]
-deps = [{ use = "dangooddd/kanagawa", rev = "d98f0c3" }]
+[[plugin.deps]]
+use = "yazi-rs/plugins:jump-to-char"
+rev = "55bf699"
+hash = "a670c03eb3760812e044a24f94cedc55"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:smart-filter"
+rev = "55bf699"
+hash = "f0c4b41b5d19a3144958383333eff6e7"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:git"
+rev = "55bf699"
+hash = "e0ada736ea676c2bbb3ec705a49526ef"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:smart-paste"
+rev = "55bf699"
+hash = "104fa2ce07d8890b07fcff68b0aaf923"
+
+[[flavor.deps]]
+use = "dangooddd/kanagawa"
+rev = "d98f0c3"
+hash = ""
