--- a/config/.config/yazi/package.toml
+++ b/config/.config/yazi/package.toml
@@ -28,6 +28,11 @@ use = "yazi-rs/plugins:smart-paste"
 rev = "55bf699"
 hash = "104fa2ce07d8890b07fcff68b0aaf923"
 
+[[plugin.deps]]
+use = "yazi-rs/plugins:full-border"
+rev = "55bf699"
+hash = "1f3dad061209081a6b04dd6ff2cb06c7"
+
 [[flavor.deps]]
 use = "dangooddd/kanagawa"
 rev = "d98f0c3"
