--- a/config/.config/helix/config.toml
+++ b/config/.config/helix/config.toml
@@ -12,5 +12,49 @@ select = "underline"
 [editor.file-picker]
 hidden = false
 
+# [editor.statusline]
+# left = ["mode", "spinner", "version-control", "file-name"]
 [editor.statusline]
-left = ["mode", "spinner", "version-control", "file-name"]
+left = [
+	"mode",
+	"spacer",
+	"spacer",
+	"version-control",
+	"file-name",
+	"file-modification-indicator",
+]
+right = [
+	"spinner",
+	"spacer",
+	"file-type",
+	"separator",
+	"position",
+	"separator",
+	"spacer",
+	"position-percentage",
+	"spacer",
+	"diagnostics",
+]
+mode.normal = "NORMAL"
+mode.insert = "INSERT"
+mode.select = "SELECT"
+
+
+[keys.normal]
+# Print the current line's git blame information to the statusline.
+space.B = ":echo %sh{git blame -L %{cursor_line},+1 %{buffer_name}}"
+C-g = [
+	":write-all",
+	":insert-output lazygit >/dev/tty",
+	":redraw",
+	":reload-all",
+]
+
+
+space.e = [
+	":sh rm -f /tmp/unique-file-h21a434",
+	":insert-output yazi '%{buffer_name}' --chooser-file=/tmp/unique-file-h21a434",
+	":insert-output echo \"x1b[?1049h\" > /dev/tty",
+	":open %sh{cat /tmp/unique-file-h21a434}",
+	":redraw",
+]
