--- a/config/.config/alacritty/visual/colors.toml
+++ b/config/.config/alacritty/visual/colors.toml
@@ -1,7 +1,9 @@
-import = ["~/.config/alacritty/visual/colors/vscode_dark.toml"]
 
 [bell]
 duration = 0
 
 [colors]
 draw_bold_text_with_bright_colors = true
+
+[general]
+import = ["~/.config/alacritty/visual/colors/vscode_dark.toml"]
