--- a/config/.config/starship/starship.toml
+++ b/config/.config/starship/starship.toml
@@ -3,6 +3,7 @@
 
 # Inserts a blank line between shell prompts
 add_newline = false
+command_timeout = 1000
 
 format = """
 [░▒▓](bg:#030B16 fg:#7DF9AA)\
